syntax = "proto3";
package protov3;
option go_package = "./protos";

service OrchestratorService {
  rpc UpdateTaskStatus(UpdateTaskStatusRequest) returns (UpdateTaskStatusResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

service BackgroundWorkerService {
  rpc AssignTaskToWorker(AssignTaskToWorkerRequest) returns (AssignTaskToWorkerResponse);
}

message AssignTaskToWorkerRequest {
  string job_id = 1;
  string job_type = 2;
  string command = 3;
}

message AssignTaskToWorkerResponse {
  bool isAccepted= 1;
  string workerId= 2;
  bool isDone= 3;
  string error= 4;

}

message SaveResultRequest {
  string id= 1;
  string status= 2;
}

message SaveResultResponse {
  string message = 1;
}

enum JobType {
  JOB_TYPE_SEND_MAIL_UNSPECIFIED = 0;
  JOB_TYPE_RUN_COMMAND_UNSPECIFIED = 1;
}

enum JobStatus {
  JOB_STATUS_COMPLETED_UNSPECIFIED=0;
  JOB_STATUS_FAILED=1;
  JOB_STATUS_REGISTERED=2;
  JOB_STATUS_STARTED=3;
}


message ChangeTaskStatusRequest{
  //*_NOT_IMPLMENTED*/
}
message ChangeTaskStatusResponse {
  //*_NOT_IMPLMENTED*/
  }
message UpdateTaskStatusRequest {
  //*_NOT_IMPLMENTED*/
}
message UpdateTaskStatusResponse {
  //*_NOT_IMPLMENTED*/
}
message HealthCheckRequest {
  string workerId=1;
  string address=2;
}
message HealthCheckResponse {
  //*_NOT_IMPLMENTED*/
  bool isRegistered=1;
}